<resources>
    <string name="app_name">User</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="or">OR</string>
    <string name="enter_reg_email">Enter your registered email id</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create An Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="for_pass">Forgot Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="card_no">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="submit">Submit</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="add_payment">Do you want to add payment method?</string>
    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="connect">Connect</string>
    <string name="confrm_order">Confirm Order</string>
    <string name="confrm_booking">Confirm Booking</string>
    <string name="dont_have_account">Don\'t have an account? Register Now</string>
    <string name="payment">Payment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="first_name_error">Invalid First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="last_name_error">Invalid Last Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="email_error">Invalid Email Id</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="mobile_error">Invalid Mobile Number</string>
    <string name="password_error">Enter Password</string>
    <string name="enter_confirm_pass">Enter password to confirm</string>
    <string name="c_pass_error">Password does not matched</string>
    <string name="loading">Loading. . .</string>
    <string name="registration_success">Registration Successful. Login to continue.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pickup">Enter PickUp Location</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="pickup">Pick Up Location</string>
    <string name="destination">Destination</string>
    <string name="book_your_ride">Book Your Ride</string>
    <string name="profile">Profile</string>
    <string name="ride_history">Ride History</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="become_driver">Become a Driver</string>
    <string name="john">John</string>
    <string name="Johnson">Johnson</string>
    <string name="change">Change</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="new_pass">New Password</string>
    <string name="old_pass">Old Password</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="pass_not_matched">Password does not matched.</string>
    <string name="title_activity_maps">Map</string>
    <string name="eight_cchar_pass"> The password must be at least 8 characters</string>
</resources>
