<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.customnavigationdrawer.MainActivity">

        <include
            android:id="@+id/custom_toolbar"
            layout="@layout/custom_home_toolbar"></include>


        <include layout="@layout/content_main"
            android:layout_below="@+id/custom_toolbar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/rl_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:layout_marginRight="56dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/book_your_ride"
    android:padding="10dp"
    android:textColor="@color/black"
    android:textSize="15dp"
    />



        <TextView
            android:id="@+id/tv_profile"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_payment"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_ride_history"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ride_history"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_support"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_logout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/btn_become_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/become_driver"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/button_shape_black"
            android:textColor="@color/white"
            />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>