<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_card_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_no"
            android:inputType="number"
            android:maxLength="19"
            android:textSize="14dp"
            android:padding="10dp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/et_expiry_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expiry_date"
            android:maxLength="7"
            android:inputType="number"
            android:textSize="14dp"
            android:padding="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:maxLength="3"
            android:inputType="number"
            android:textSize="14dp"
            android:padding="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:textColor="@color/white"
        />
</LinearLayout>
</RelativeLayout>