<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_home"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
>

<fragment
    android:id="@+id/map"
    android:layout_below="@id/toolbar"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="150dp"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            >



            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            />
            <TextView
                android:id="@+id/pic_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_pickup"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14dp"
                android:background="@drawable/button_white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/drop_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_destination"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14dp"
                android:background="@drawable/button_white"
                />
        </LinearLayout>



    </RelativeLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_gravity="bottom"
        android:id="@+id/frm_lay_estimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button

        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape_black"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/confrm_order"
        android:textAllCaps="false"
        />

</LinearLayout>


    <LinearLayout
        android:id="@+id/fra_lay_confirm_booking"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/tv_estimateprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="20sp"/>


        <Button

            android:id="@+id/btn_confirmbooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape_black"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/confrm_booking"
            android:textAllCaps="false"
            />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>