<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_old_password"
                android:hint="@string/old_pass"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_new_pass"
                android:hint="@string/new_pass"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_c_password"
                android:hint="@string/confirm_pass"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_change_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape_black"
            android:text="@string/change_pass"
            android:textColor="@color/white"
            android:padding="10dp"
            />

    </LinearLayout>

</RelativeLayout>