<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".registration.ChooseRegistrationRoleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:padding="5dp"
            android:src="@drawable/logo_white" />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:textStyle="bold"

            />
        <Button
            android:id="@+id/btn_create_account"
            android:text="@string/create_an_account"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_white"
            />
    </LinearLayout>

</RelativeLayout>