<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/custom_toolbar"></include>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_circular"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"

                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_email"
                        android:hint="@string/email_id"
                        android:textSize="14dp"
                        android:padding="10dp"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_password"
                        android:hint="@string/password"
                        android:textSize="14dp"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pass"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
                <Button
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/btn_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_shape_black"
                    android:textColor="@color/white"
                    android:text="@string/connect"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:text="@string/dont_have_account"
                    />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>