<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".registration.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include layout="@layout/custom_toolbar"></include>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
         >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_f_name"
                        android:hint="@string/first_name"
                        android:textSize="14dp"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_l_name"
                        android:hint="@string/last_name"
                        android:textSize="14dp"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_email"
                        android:hint="@string/email_id"
                        android:textSize="14dp"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:editable="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:hint="@string/mobile_number"
                        android:textSize="14dp"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:editable="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape_black"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/update"
                    android:textColor="@color/white"

                    />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</RelativeLayout>